--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 virtualenv = "*"
 django = "*"
 djangorestframework = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
